# football

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  formation_strategy.py  mypy.ini  play_scenarios.toml  pyproject.toml  requirements-dev.txt  requirements.txt  test_abstraction.py  test_advanced_resolution.py  test_all_formations.py  test_comprehensive_validation.py  test_counter_analysis.py  test_football2.py  test_game_modes.py  test_matchups.py  test_matchups_advanced.py  test_personnel.py  test_play_caller.py  test_play_resolution.py  test_play_system.py  test_scenarios.toml  test_trap_power.py  test_validation.py
.github/workflows/: ci.yml
data/config/: placement.yaml
data/configs/: average_defense_cover3.yaml  average_offense_trap.yaml  draw_play_offense.yaml  elite_defense_cover3.yaml  elite_offense_trap.yaml  off_tackle_offense.yaml  te_passing_offense.yaml
data/formations/defense/: 34_defense.yaml  base43.yaml  bear46.yaml  dime.yaml  goalline_defense.yaml  nickel.yaml  prevent_defense.yaml
data/formations/offense/: empty_backfield.yaml  i_form.yaml  pistol_11.yaml  spread_10.yaml  strong_i.yaml
data/plays/defense/: 34_cover2_robber.yaml  34_run_blitz.yaml  43_cover3_base.yaml  43_mike_blitz_cover1.yaml  bear46_run_commit.yaml  corner_blitz_coverage.yaml  cover2_robber_te.yaml  dime_cover4_quarters.yaml  dime_quarters_drop8.yaml  dime_zone_fire.yaml  eight_man_box_sweep_stop.yaml  nickel_doubleA_cover2.yaml  prevent_quarters.yaml  (+2 more)
docs/: season_ratings_system.md
quick_tests/: football_simulator.py  quick_test.py  test_abstraction.py  test_advanced_resolution.py  test_all_formations.py  test_comprehensive_validation.py  test_counter_analysis.py  test_defensive_schemes.py  test_enhanced_engine.py  test_football2.py  test_game_modes.py  test_matchups.py  test_matchups_advanced.py  test_personnel.py  test_play_caller.py  test_play_resolution.py  test_play_system.py  test_player_ratings.py  test_realistic_plays.py  test_trap_power.py  test_turnovers.py  test_validation.py
src/: formation_model.py  play_v_play_matrix.py  resolver.py
src/football/: .gitignore  api.py  config.py  def_formations.py  defense_schema.yaml  dice_engine.py  engine.py  football_types.py  formation_strategy.py  formation_validator.py  formations_defense.yaml  formations_offense.yaml  mapper.py  matchup_analyzer.py  models.py  off_formations.py  offense.py  offense_schema.yaml  overlays.py  personnel.py  personnel.yaml  play_analyzer.py  play_caller.py  play_loader.py  play_resolution.py  play_sim_yaml.py  play_simulator.py  play_ui.py  plays.py  plays_defense.yaml  plays_loader.py  plays_offense.yaml  positions.py  pyproject.toml  repository.py  requirements-dev.txt  resolver.py  resolver_config.yaml  schemas.py  visualize_play.py  (+1 more)
src/football2/: __init__.py
tests/: test_defensive_plays.py  test_formation_model.py  test_offensive_plays.py  test_personnel.py  test_play_loader.py  test_positions.py  test_resolve_play_v2.py  test_resolver.py  test_resolver_helpers.py  test_resolver_roll_core.py  test_resolver_roll_dice.py  test_yaml_loader.py
tools/: complete_demo.py  enhanced_demo.py  enhanced_play_selector.py  football_simulator.py  interactive_play_selector.py  matchup_showcase.py  mike_test.py  play_results_showcase.py  play_selector_demo.py  quick_test.py  season_rating_demo.py  simple_season_demo.py  test_defensive_schemes.py  test_enhanced_engine.py  test_player_ratings.py  test_realistic_plays.py  test_resolution_tuning.py  test_turnovers.py
(+87 files in other folders)
